# stock

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: __init__.py  commission.yaml  fund_tail_candidates.csv  settings.py  trading_rules.yaml  watchlist_monitor.yaml  zijin_monitor.yaml
docs/: ARCHITECTURE.md  README.md  codex-usage-playbook.md  data_ops_runner_deployment.md  data_quality_calendar_ui_design.md  database-data-dictionary-2026-07-22.md  fund_tail_prediction_todo.md  plan-2026-07-22-project-cleanup.md  tdxrs-data-source-guide.md  todo.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
notebooks/: 01_数据获取与探索.ipynb  02_因子计算与可视化.ipynb  03_因子研究_IC分析.ipynb  04_策略回测.ipynb  05_模拟交易.ipynb
scripts/: backtest_fund_tail_advice.py  benchmark_mootdx_xdxr.py  build_clickhouse_research_dataset.py  build_fund_tail_candidates.py  build_liquid_research_dataset.py  build_research_adjustment_data.py  build_research_dataset.py  check_clickhouse_coverage.py  check_data_sources.py  compute_timesfm_features.py  daily_fund_tail_advice.py  daily_review_snapshot.py  diagnose_tail_factors.py  diagnose_tail_factors_walkforward.py  discover_fund_tail_opportunities.py  download_history.py  evaluate_tail_session_grid.py  historical_batch_size_test.py  import_fund_tail_clickhouse.py  install_data_ops_launchd.sh  maintain_clickhouse_tables.py  migrate_xdxr_three_layer.py  monitor_batch_test.py  monitor_zijin.py  probe_mootdx_source.py  quick_batch_size_test.py  restart_web.sh  run_daily_fund_tail_advice.sh  (+23 more)
(+460 files in other folders)
