[project]
name = "a-share-quant"
version = "0.1.0"
description = "A-share quantitative trading platform"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "akshare>=1.14",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "cvxpy>=1.5",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
